vertical-align #FIX

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ hr {
 .img1 {
   width: 3%;
   height: auto;
-
+  vertical-align: middle;
 }
 
 /* da finire------- 
